--- a/Notebooks/Exploration 3 - More ML Models.ipynb
+++ b/Notebooks/Exploration 3 - More ML Models.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Similar imports as before."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -32,38 +39,44 @@
    ],
    "source": [
     "truth_text_mapping = {\n",
-    "    'pants-fire':0,\n",
-    "    'false':1,\n",
-    "    'barely-true':2,\n",
-    "    'half-true':3,\n",
-    "    'mostly-true':4,\n",
-    "    'true':5\n",
+    "    'pants-fire': 0,\n",
+    "    'false': 1,\n",
+    "    'barely-true': 2,\n",
+    "    'half-true': 3,\n",
+    "    'mostly-true': 4,\n",
+    "    'true': 5\n",
     "}\n",
+    "\n",
+    "\n",
     "class Statement:\n",
-    "    def __init__(self, body, speaker, value,context):\n",
+    "    def __init__(self, body, speaker, value, context):\n",
     "        self.body = body\n",
     "        self.speaker = speaker\n",
     "        self.value = truth_text_mapping[value]\n",
     "        self.context = context\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    @staticmethod\n",
     "    def from_row(row):\n",
     "        return Statement(value=row[1],\n",
     "                         body=row[2],\n",
     "                         speaker=row[4],\n",
     "                         context=row[13])\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    def __repr__(self):\n",
-    "        arg_str =  str(', '.join(['='.join([i[0],repr(i[1])]) for i in vars(self).items()]))\n",
+    "        arg_str = str(', '.join(['='.join([i[0], repr(i[1])])\n",
+    "                                 for i in vars(self).items()]))\n",
     "        return \"Statement({})\".format(arg_str)\n",
-    "    \n",
-    "    \n",
+    "\n",
     "    def __str__(self):\n",
     "        return repr(self)\n",
-    "    \n",
+    "\n",
+    "    @property\n",
+    "    def features(self):\n",
+    "        return ' '.join([self.speaker, self.context, self.body])\n",
+    "\n",
+    "\n",
     "import csv\n",
+    "\n",
     "\n",
     "def load_liar_data(path):\n",
     "    statements = []\n",
@@ -73,9 +86,11 @@
     "            try:\n",
     "                statements.append(Statement.from_row(row))\n",
     "            except IndexError:\n",
-    "                print(row,len(row))\n",
+    "                print(row, len(row))\n",
     "    return statements\n",
-    "statements = load_liar_data(\"../datasets/LIAR/train.tsv\") \n",
+    "\n",
+    "\n",
+    "statements = load_liar_data(\"../datasets/LIAR/train.tsv\")\n",
     "# print out some statements to verify by eye.\n",
     "len(statements)"
    ]
@@ -89,14 +104,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vocab size: (10241, 12193)\n"
+      "Vocab size: (10241, 14552)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<10241x12193 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 165946 stored elements in Compressed Sparse Row format>"
+       "<10241x14552 sparse matrix of type '<class 'numpy.int64'>'\n",
+       "\twith 221431 stored elements in Compressed Sparse Row format>"
       ]
      },
      "execution_count": 3,
@@ -108,7 +123,7 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "vectorizer = CountVectorizer()\n",
     "\n",
-    "x = vectorizer.fit_transform([s.body for s in statements])\n",
+    "x = vectorizer.fit_transform([s.features for s in statements])\n",
     "y = np.array([s.value for s in statements]).ravel()\n",
     "\n",
     "# vocab\n",
@@ -119,38 +134,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.69209476744252107"
+       "0.73764421048562223"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clf = linear_model.Ridge(fit_intercept=True, alpha=0.01)\n",
-    "clf.fit(x,y)\n",
-    "clf.score(x,y)"
+    "clf.fit(x, y)\n",
+    "clf.score(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.25242694548294575"
+       "-0.15355250207925675"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -164,73 +179,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(2.0483288410019833, 5),\n",
-       " (1.8270329051411935, 1),\n",
-       " (1.9005771119300714, 1),\n",
-       " (1.8546327866984273, 3),\n",
-       " (-0.2818583929268188, 0),\n",
-       " (3.0689386603050224, 5),\n",
-       " (2.6241881819487811, 5),\n",
-       " (-0.056102568461507296, 2),\n",
-       " (3.6780705895666399, 5),\n",
-       " (3.4346034189214314, 2),\n",
-       " (2.2071345830870106, 2),\n",
-       " (0.17875803151599445, 2),\n",
-       " (1.8645551578295956, 0),\n",
-       " (2.2101722161426034, 1),\n",
-       " (2.0183135893087991, 3),\n",
-       " (2.9094289264728248, 5),\n",
-       " (2.7974442252214784, 0),\n",
-       " (3.2260358964054503, 3),\n",
-       " (2.7895846184459101, 5),\n",
-       " (3.0697657918891248, 1)]"
+       "[(2.3190148093157847, 5),\n",
+       " (2.5264375090142104, 1),\n",
+       " (1.9545609280672682, 1),\n",
+       " (2.2104322327193056, 3),\n",
+       " (0.74627427433243954, 0),\n",
+       " (3.2444147393076901, 5),\n",
+       " (4.3541678624691773, 5),\n",
+       " (0.55351543858837626, 2),\n",
+       " (2.0689796475251283, 5),\n",
+       " (4.1465117319822618, 2),\n",
+       " (2.3783477202740246, 2),\n",
+       " (0.57094086590817872, 2),\n",
+       " (2.5052177980042387, 0),\n",
+       " (2.3567443396935608, 1),\n",
+       " (2.221714769257753, 3),\n",
+       " (2.920319039580844, 5),\n",
+       " (2.677090818797252, 0),\n",
+       " (2.5799909333286504, 3),\n",
+       " (2.3387620984333815, 5),\n",
+       " (3.1518270417649581, 1)]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# print out some predicted vs. actual values\n",
-    "list(zip(clf.predict(x_test),y_test[:20]))"
+    "list(zip(clf.predict(x_test), y_test[:20]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01 -0.252180247313\n",
-      "0.0215443469003 -0.250847512588\n",
-      "0.0464158883361 -0.247224237574\n",
-      "0.1 -0.239376948935\n",
-      "0.215443469003 -0.224567613666\n",
-      "0.464158883361 -0.19537853639\n",
-      "1.0 -0.141689352038\n",
-      "2.15443469003 -0.077289045665\n",
-      "4.64158883361 -0.0166887966921\n",
-      "10.0 0.0265333659539\n",
-      "(10.0, 0.02653336595390432)\n"
+      "0.01 -0.153886870728\n",
+      "0.0215443469003 -0.151199543725\n",
+      "0.0464158883361 -0.147757688471\n",
+      "0.1 -0.141873438231\n",
+      "0.215443469003 -0.133104059989\n",
+      "0.464158883361 -0.117215704741\n",
+      "1.0 -0.0899746504741\n",
+      "2.15443469003 -0.0514309824428\n",
+      "4.64158883361 -0.00833071742524\n",
+      "10.0 0.0292901659787\n",
+      "(10.0, 0.029290165978745786)\n"
      ]
     }
    ],
    "source": [
     "# find optimal alpha for linear Ridge model\n",
     "best = None\n",
-    "for al in np.logspace(-2,1,10):\n",
+    "for al in np.logspace(-2, 1, 10):\n",
     "    clf.set_params(alpha=al)\n",
-    "    clf.fit(x,y)\n",
+    "    clf.fit(x, y)\n",
     "    s = clf.score(x_test, y_test)\n",
     "    if best is None or s > best[1]:\n",
     "        best = (al, s)\n",
@@ -257,7 +272,7 @@
    ],
    "source": [
     "clf.set_params(alpha=best[0])\n",
-    "clf.fit(x,y)"
+    "clf.fit(x, y)"
    ]
   },
   {
@@ -268,7 +283,7 @@
     {
      "data": {
       "text/plain": [
-       "0.026455525070466557"
+       "0.029240617130987471"
       ]
      },
      "execution_count": 9,
@@ -277,7 +292,7 @@
     }
    ],
    "source": [
-    "clf.score(x_test,y_test)"
+    "clf.score(x_test, y_test)"
    ]
   },
   {
@@ -288,26 +303,26 @@
     {
      "data": {
       "text/plain": [
-       "[(1.9850047380894333, 5),\n",
-       " (2.3123691664532631, 2),\n",
-       " (2.063866140562939, 2),\n",
-       " (1.8996995282554476, 3),\n",
-       " (0.83674901774951826, 4),\n",
-       " (2.5424982396365383, 4),\n",
-       " (2.9507323648308996, 5),\n",
-       " (1.2123083357129312, 4),\n",
-       " (3.5090653687138569, 1),\n",
-       " (2.8730446033567505, 0),\n",
-       " (2.5370943959479089, 0),\n",
-       " (1.430908582682233, 3),\n",
-       " (2.2927058622837384, 2),\n",
-       " (2.6513606528981293, 1),\n",
-       " (2.6868274802971746, 0),\n",
-       " (2.7842100963194198, 3),\n",
-       " (2.3475649551525319, 2),\n",
-       " (2.61991345736971, 2),\n",
-       " (2.748466602966269, 2),\n",
-       " (3.1766634228519992, 1)]"
+       "[(2.3209795324701092, 5),\n",
+       " (2.6715138179302662, 2),\n",
+       " (2.0496519548811736, 2),\n",
+       " (2.2188680457871435, 3),\n",
+       " (1.3843752973352774, 4),\n",
+       " (2.9208670822019425, 4),\n",
+       " (3.6224864057170159, 5),\n",
+       " (1.2337969189914391, 4),\n",
+       " (2.3075057959753473, 1),\n",
+       " (3.5117613394166924, 0),\n",
+       " (2.5199625546045241, 0),\n",
+       " (1.5839646421350715, 3),\n",
+       " (2.5158981655332973, 2),\n",
+       " (2.8834155462485995, 1),\n",
+       " (2.635620040189552, 0),\n",
+       " (2.8464316728044619, 3),\n",
+       " (2.4783848179009453, 2),\n",
+       " (2.3252019983155332, 2),\n",
+       " (2.5958912519461395, 2),\n",
+       " (3.1956225085754912, 1)]"
       ]
      },
      "execution_count": 10,
@@ -317,7 +332,14 @@
    ],
    "source": [
     "# print out some predicted vs. actual values\n",
-    "list(zip(clf.predict(x_test),y_test[-20:]))"
+    "list(zip(clf.predict(x_test), y_test[-20:]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantify the performance of other models."
    ]
   },
   {
@@ -328,7 +350,7 @@
     {
      "data": {
       "text/plain": [
-       "0.23283346487766376"
+       "0.22494080505130229"
       ]
      },
      "execution_count": 11,
@@ -340,8 +362,8 @@
     "from sklearn.svm import LinearSVC\n",
     "model = LinearSVC\n",
     "clf = model()\n",
-    "clf.fit(x,y)\n",
-    "clf.score(x_test,y_test)\n"
+    "clf.fit(x, y)\n",
+    "clf.score(x_test, y_test)"
    ]
   },
   {
@@ -352,7 +374,7 @@
     {
      "data": {
       "text/plain": [
-       "0.18310970797158643"
+       "0.17442778216258878"
       ]
      },
      "execution_count": 12,
@@ -361,10 +383,10 @@
     }
    ],
    "source": [
-    "from sklearn.naive_bayes import GaussianNB, MultinomialNB\n",
+    "from sklearn.naive_bayes import GaussianNB, MultinomialNB, BernoulliNB\n",
     "clf = GaussianNB()\n",
-    "clf.fit(x.toarray(),y)\n",
-    "clf.score(x_test.toarray(),y_test)\n"
+    "clf.fit(x.toarray(), y)\n",
+    "clf.score(x_test.toarray(), y_test)"
    ]
   },
   {
@@ -375,7 +397,7 @@
     {
      "data": {
       "text/plain": [
-       "0.24388318863456984"
+       "0.23441199684293607"
       ]
      },
      "execution_count": 13,
@@ -385,8 +407,8 @@
    ],
    "source": [
     "clf = MultinomialNB()\n",
-    "clf.fit(x,y)\n",
-    "clf.score(x_test,y_test)\n"
+    "clf.fit(x, y)\n",
+    "clf.score(x_test, y_test)"
    ]
   },
   {
@@ -395,27 +417,48 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "0.24704025256511444"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clf = BernoulliNB()\n",
+    "clf.fit(x, y)\n",
+    "clf.score(x_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.001 0.0673758755054\n",
-      "0.00129154966501 0.0718589017622\n",
-      "0.0016681005372 0.0718275178189\n",
-      "0.00215443469003 0.0693462141626\n",
-      "0.00278255940221 0.0667271790784\n",
-      "0.0035938136638 0.0622470096344\n",
-      "0.00464158883361 0.0556508909774\n",
-      "0.00599484250319 0.0507454206886\n",
-      "0.00774263682681 0.0463782286907\n",
-      "0.01 0.0413154529219\n"
+      "10.0 0.000830238172206\n"
      ]
     }
    ],
    "source": [
-    "for al in np.logspace(-3,-2,10):\n",
-    "    clf = linear_model.Lasso(alpha = al)\n",
-    "    clf.fit(x,y)\n",
-    "    print(al, clf.score(x_test,y_test))"
+    "clf = linear_model.Lasso(alpha=0.1)\n",
+    "clf.fit(x, y)\n",
+    "print(al, clf.score(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusion\n",
+    "\n",
+    "The paper achieved similar accuracy to my experiments here at about 23%."
    ]
   },
   {
@@ -423,7 +466,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "    "
+   ]
   }
  ],
  "metadata": {
