--- a/Notebooks/Exploration 2 - Naive Bayesian Classification.ipynb
+++ b/Notebooks/Exploration 2 - Naive Bayesian Classification.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repository for this code: https://github.com/TheCDC/CSC413_Midterm_Project\n",
+    "\n",
+    "Focus on cleaning up and making the code better."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -256,7 +265,9 @@
     "collapsed": true
    },
    "source": [
-    "~25% accuracy is insatisfactory."
+    "# Conclusion\n",
+    "\n",
+    "~25% accuracy is unsatisfactory, let's see if we can do better."
    ]
   },
   {
