--- a/Notebooks/Exploration 3 - More ML Models.ipynb
+++ b/Notebooks/Exploration 3 - More ML Models.ipynb
@@ -4,6 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Copy much of the procedures from previous explorations, but this time focus on using scikit-learn models and finding the best one.\n",
+    "\n",
+    "Repository for this code: https://github.com/TheCDC/CSC413_Midterm_Project\n",
+    "\n",
+    "Choosing a model: http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html\n",
+    "\n",
+    "List of linear models: http://scikit-learn.org/stable/modules/classes.html#module-sklearn.linear_model\n",
+    "\n",
+    "\n",
+    "Reference: https://www.cs.ucsb.edu/%7Ewilliam/papers/acl2017.pdf"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Similar imports as before."
    ]
   },
@@ -44,7 +60,7 @@
     "    'barely-true': 2,\n",
     "    'half-true': 3,\n",
     "    'mostly-true': 4,\n",
-    "    'true': 5\n",
+    "    'true': 5,\n",
     "}\n",
     "\n",
     "\n",
@@ -96,6 +112,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Vectorize the training data via sklearn."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -133,6 +156,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validate the regression model against the input data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -140,7 +170,7 @@
     {
      "data": {
       "text/plain": [
-       "0.73764421048562223"
+       "0.73765150487092312"
       ]
      },
      "execution_count": 4,
@@ -155,6 +185,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A bad score on the training data is not promising."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -162,7 +199,7 @@
     {
      "data": {
       "text/plain": [
-       "-0.15355250207925675"
+       "-0.18428915852079597"
       ]
      },
      "execution_count": 5,
@@ -172,7 +209,7 @@
    ],
    "source": [
     "test_statements = load_liar_data(\"../datasets/LIAR/test.tsv\")\n",
-    "x_test = vectorizer.transform([s.body for s in test_statements])\n",
+    "x_test = vectorizer.transform([s.features for s in test_statements])\n",
     "y_test = np.array([s.value for s in test_statements]).ravel()\n",
     "clf.score(x_test, y_test)"
    ]
@@ -185,26 +222,26 @@
     {
      "data": {
       "text/plain": [
-       "[(2.3190148093157847, 5),\n",
-       " (2.5264375090142104, 1),\n",
-       " (1.9545609280672682, 1),\n",
-       " (2.2104322327193056, 3),\n",
-       " (0.74627427433243954, 0),\n",
-       " (3.2444147393076901, 5),\n",
-       " (4.3541678624691773, 5),\n",
-       " (0.55351543858837626, 2),\n",
-       " (2.0689796475251283, 5),\n",
-       " (4.1465117319822618, 2),\n",
-       " (2.3783477202740246, 2),\n",
-       " (0.57094086590817872, 2),\n",
-       " (2.5052177980042387, 0),\n",
-       " (2.3567443396935608, 1),\n",
-       " (2.221714769257753, 3),\n",
-       " (2.920319039580844, 5),\n",
-       " (2.677090818797252, 0),\n",
-       " (2.5799909333286504, 3),\n",
-       " (2.3387620984333815, 5),\n",
-       " (3.1518270417649581, 1)]"
+       "[(1.6981627780554429, 5),\n",
+       " (2.3943054810660889, 1),\n",
+       " (1.4846024236565638, 1),\n",
+       " (1.5923527449103883, 3),\n",
+       " (0.61512542788298097, 0),\n",
+       " (3.1396738979990655, 5),\n",
+       " (3.7472879880233894, 5),\n",
+       " (0.35950924016343855, 2),\n",
+       " (2.6628539526986645, 5),\n",
+       " (4.4398964812644159, 2),\n",
+       " (2.6073627088634286, 2),\n",
+       " (0.0023495192461071568, 2),\n",
+       " (0.19147823712872247, 0),\n",
+       " (1.5131455488610017, 1),\n",
+       " (2.0087359387436363, 3),\n",
+       " (2.5033620682511883, 5),\n",
+       " (1.8920736856669986, 0),\n",
+       " (2.5360836997720897, 3),\n",
+       " (2.9556110125594217, 5),\n",
+       " (2.469653323641547, 1)]"
       ]
      },
      "execution_count": 6,
@@ -226,24 +263,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.01 -0.153886870728\n",
-      "0.0215443469003 -0.151199543725\n",
-      "0.0464158883361 -0.147757688471\n",
-      "0.1 -0.141873438231\n",
-      "0.215443469003 -0.133104059989\n",
-      "0.464158883361 -0.117215704741\n",
-      "1.0 -0.0899746504741\n",
-      "2.15443469003 -0.0514309824428\n",
-      "4.64158883361 -0.00833071742524\n",
-      "10.0 0.0292901659787\n",
-      "(10.0, 0.029290165978745786)\n"
+      "0.1 -0.168200480777\n",
+      "0.16681005372 -0.160992548303\n",
+      "0.278255940221 -0.150582729315\n",
+      "0.464158883361 -0.135034903273\n",
+      "0.774263682681 -0.111858085519\n",
+      "1.29154966501 -0.0813207911703\n",
+      "2.15443469003 -0.0452453448098\n",
+      "3.5938136638 -0.00510536231343\n",
+      "5.99484250319 0.0327295465867\n",
+      "10.0 0.0655838577779\n",
+      "(10.0, 0.065583857777861798)\n"
      ]
     }
    ],
    "source": [
     "# find optimal alpha for linear Ridge model\n",
+    "clf = linear_model.Ridge(fit_intercept=True)\n",
     "best = None\n",
-    "for al in np.logspace(-2, 1, 10):\n",
+    "for al in np.logspace(-1, 1, 10):\n",
     "    clf.set_params(alpha=al)\n",
     "    clf.fit(x, y)\n",
     "    s = clf.score(x_test, y_test)\n",
@@ -283,7 +321,7 @@
     {
      "data": {
       "text/plain": [
-       "0.029240617130987471"
+       "0.06545819913249773"
       ]
      },
      "execution_count": 9,
@@ -303,26 +341,26 @@
     {
      "data": {
       "text/plain": [
-       "[(2.3209795324701092, 5),\n",
-       " (2.6715138179302662, 2),\n",
-       " (2.0496519548811736, 2),\n",
-       " (2.2188680457871435, 3),\n",
-       " (1.3843752973352774, 4),\n",
-       " (2.9208670822019425, 4),\n",
-       " (3.6224864057170159, 5),\n",
-       " (1.2337969189914391, 4),\n",
-       " (2.3075057959753473, 1),\n",
-       " (3.5117613394166924, 0),\n",
-       " (2.5199625546045241, 0),\n",
-       " (1.5839646421350715, 3),\n",
-       " (2.5158981655332973, 2),\n",
-       " (2.8834155462485995, 1),\n",
-       " (2.635620040189552, 0),\n",
-       " (2.8464316728044619, 3),\n",
-       " (2.4783848179009453, 2),\n",
-       " (2.3252019983155332, 2),\n",
-       " (2.5958912519461395, 2),\n",
-       " (3.1956225085754912, 1)]"
+       "[(1.7594321883696065, 5),\n",
+       " (2.5446481776419683, 2),\n",
+       " (1.6250822235700111, 2),\n",
+       " (1.7606811898223107, 3),\n",
+       " (1.0883171284360318, 4),\n",
+       " (2.7344527249075918, 4),\n",
+       " (3.0576007305170365, 5),\n",
+       " (1.1372971751590499, 4),\n",
+       " (2.4557353260277579, 1),\n",
+       " (3.8825840750344978, 0),\n",
+       " (2.8292044155289315, 0),\n",
+       " (1.362745192491009, 3),\n",
+       " (0.62440738983604582, 2),\n",
+       " (2.0212172305660516, 1),\n",
+       " (2.479063328146335, 0),\n",
+       " (2.4937448739382062, 3),\n",
+       " (1.82199953410074, 2),\n",
+       " (2.1844813724470371, 2),\n",
+       " (3.0034227534368925, 2),\n",
+       " (2.9471367988463322, 1)]"
       ]
      },
      "execution_count": 10,
@@ -339,7 +377,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quantify the performance of other models."
+    "Quantify the performance of other models.\n",
+    "FLowchart for choosing models found here: http://scikit-learn.org/stable/tutorial/machine_learning_map/index.html"
    ]
   },
   {
@@ -350,7 +389,7 @@
     {
      "data": {
       "text/plain": [
-       "0.22494080505130229"
+       "0.22415153906866614"
       ]
      },
      "execution_count": 11,
@@ -374,7 +413,7 @@
     {
      "data": {
       "text/plain": [
-       "0.17442778216258878"
+       "0.19021310181531176"
       ]
      },
      "execution_count": 12,
@@ -397,7 +436,7 @@
     {
      "data": {
       "text/plain": [
-       "0.23441199684293607"
+       "0.26045777426992894"
       ]
      },
      "execution_count": 13,
@@ -419,7 +458,7 @@
     {
      "data": {
       "text/plain": [
-       "0.24704025256511444"
+       "0.27703235990528807"
       ]
      },
      "execution_count": 14,
@@ -439,17 +478,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10.0 0.000830238172206\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.0012527445600031273"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "clf = linear_model.Lasso(alpha=0.1)\n",
     "clf.fit(x, y)\n",
-    "print(al, clf.score(x_test, y_test))"
+    "clf.score(x_test, y_test)"
    ]
   },
   {
@@ -458,7 +500,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "The paper achieved similar accuracy to my experiments here at about 23%."
+    "The paper achieved similar accuracy to my experiments here at about 22% to 27%. It is clear that the core assumption that the truth/fake value of a statement can be inferred from the vocabulary and structure is flawed. It is possible that a model that actually understands English and manners of speech could get better results."
    ]
   },
   {
